# l3June2026

./: 01_demo.ipynb  01_my_mcp_server.py  02_sample_agent.ipynb  03_sample_agent.ipynb  04_memory_agent.ipynb  05_long_term_memory.ipynb  06_shopease_case_study_solution.ipynb  07_langgraph_fundamentals.ipynb  08_langgraph_advanced.ipynb  Agent_Memory.pptx  Agentic_AI_Demo.ipynb  Case_Study_ShopEase_Memory_Agent.md  LangGraph_Advanced_Lesson_D.pptx  LangGraph_Fundamentals_Lesson_C.pptx  Long_Term_Memory_Lesson_B.pptx  chatbot_with_hitl.py  chatbot_without_hitl.py  hitl.ipynb  langgraph_lesson_d.sqlite  langraph.ipynb  main.py  my_client.py  pyproject.toml  requirements.txt  subgraph_shared.ipynb  subgraphs.ipynb  tavily_demo.ipynb  tavily_mcp_client.py  tools_demo.ipynb
