[project]
name = "l3june2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "certifi>=2026.5.20",
    "ddgs>=9.14.4",
    "docutils>=0.23",
    "e2b-code-interpreter>=2.8.0",
    "fastapi>=0.137.1",
    "fastmcp>=3.4.2",
    "google-genai>=2.8.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.8.16",
    "lxml>=6.1.1",
    "markdown2>=2.5.5",
    "markitdown[all]>=0.1.5",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openai>=2.41.1",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "pymysql>=1.2.0",
    "pyopenssl>=26.3.0",
    "python-certifi-win32>=1.6.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "textblob>=0.20.0",
    "tiktoken>=0.13.0",
    "xhtml2pdf>=0.2.17",
    "yfinance>=1.4.1",
    "youtube-transcript-api>=1.0.3",
]
